--- a/public/assets/css/common/tailwind-custom.css
+++ b/public/assets/css/common/tailwind-custom.css
@@ -496,8 +496,7 @@ input[type="email"] :focus-visible {
 /* landing page */
 .sign-in-button {
     border: 2px solid transparent;
-    background-image: linear-gradient(#000000, #000000),
-        linear-gradient(90deg, #fd7f57 -17.86%, #e22861 25.88%, #763cd4 107.47%);
+    background-image: linear-gradient(#000000, #000000);
     background-origin: border-box;
     background-clip: content-box, border-box;
 }
@@ -1114,11 +1113,7 @@ body.shrink .details-body {
     .sign-in-button-light-mode {
         border: 2px solid transparent;
         background-image: linear-gradient(#000000,
-                #000000),
-            linear-gradient(90deg,
-                #fd7f57 -17.86%,
-                #e22861 25.88%,
-                #763cd4 107.47%);
+                #000000);
         background-origin: border-box;
         backdrop-filter: blur(24px);
         background-clip: content-box, border-box;
@@ -1126,11 +1121,7 @@ body.shrink .details-body {
 
     .dark .sign-in-button-light-mode {
         border: 2px solid transparent;
-        background-image: linear-gradient(#000000, #000000),
-            linear-gradient(90deg,
-                #fd7f57 -17.86%,
-                #e22861 25.88%,
-                #763cd4 107.47%);
+        background-image: linear-gradient(#000000, #000000);
         background-origin: border-box;
         background-clip: content-box, border-box;
     }
