--- a/public/assets/css/common/tailwind-custom.css
+++ b/public/assets/css/common/tailwind-custom.css
@@ -275,7 +275,7 @@ html[dir="rtl"] .custom-dropdown-arrow:after {
 
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link.active {
-    background-color: #ff774b;
+    background-color: #32B9C5;
     border: unset !important;
     color: white !important;
 }
