--- a/public/assets/css/common/tailwind-custom.css
+++ b/public/assets/css/common/tailwind-custom.css
@@ -916,6 +916,10 @@ body.mceContentBody {
 .progress-fill {
     animation: progress-forward 3s;
     background: rgb(34, 193, 195);
+    background: linear-gradient(90deg,
+            #fd7f57 -17.86%,
+            #e22861 25.88%,
+            #763cd4 107.47%);
 }
 
 @keyframes progress-forward {
