--- a/public/assets/css/common/tailwind-custom.css
+++ b/public/assets/css/common/tailwind-custom.css
@@ -426,7 +426,7 @@ html[dir="rtl"] .custom-dropdown-arrow:after {
     border: 1px solid transparent;
     border-radius: 12px;
     background-image: linear-gradient(white, white),
-        linear-gradient(90deg, #fd7f57 -17.86%, #e22861 25.88%, #763cd4 107.47%);
+        linear-gradient(90deg, #32B9C5 -17.86%, #32B9C5 25.88%, #32B9C5 107.47%);
     background-origin: border-box;
     background-clip: content-box, border-box;
 }
@@ -435,7 +435,7 @@ html[dir="rtl"] .custom-dropdown-arrow:after {
     border: 1px solid transparent !important;
     border-radius: 12px !important;
     background-image: linear-gradient(white, white),
-        linear-gradient(90deg, #fd7f57 -17.86%, #e22861 25.88%, #763cd4 107.47%) !important;
+        linear-gradient(90deg, #32B9C5 -17.86%, #32B9C5 25.88%, #32B9C5 107.47%) !important;
     background-origin: border-box !important;
     background-clip: content-box, border-box !important;
 }
@@ -444,7 +444,7 @@ html[dir="rtl"] .custom-dropdown-arrow:after {
     border: 1px solid transparent !important;
     border-radius: 12px !important;
     background-image: linear-gradient(#474746, #474746),
-        linear-gradient(90deg, #fd7f57 -17.86%, #e22861 25.88%, #763cd4 107.47%) !important;
+        linear-gradient(90deg, #32B9C5 -17.86%, #32B9C5 25.88%, #32B9C5 107.47%) !important;
     background-origin: border-box !important;
     background-clip: content-box, border-box !important;
 }
@@ -453,7 +453,7 @@ html[dir="rtl"] .custom-dropdown-arrow:after {
     border: 1px solid transparent;
     border-radius: 12px;
     background-image: linear-gradient(#474746, #474746),
-        linear-gradient(90deg, #fd7f57 -17.86%, #e22861 25.88%, #763cd4 107.47%);
+        linear-gradient(90deg, #32B9C5 -17.86%, #32B9C5 25.88%, #32B9C5 107.47%);
     background-origin: border-box;
     background-clip: content-box, border-box;
 }
@@ -1660,11 +1660,11 @@ body.shrink .speech-edit-width .ui-tooltip-content::before {
 }
 
 .sidebar-top stop[stop-color="#E60C84"] {
-    stop-color: #E60C84 !important;
+    stop-color: #32B9C5 !important;
 }
 
 .sidebar-top stop[stop-color="#FFCF4B"] {
-    stop-color: #FFCF4B !important;
+    stop-color: #32B9C5 !important;
 }
 
 .ts-wrapper.single.input-active .ts-control {
